# parallel-cookbook

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADR.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  styleguide.md  task-best-practices.md  task_library_trimmed.json  typescript-sdk-types.d.ts
.github/workflows/: pre-commit.yml
oss/: _redirects  wrangler.jsonc
python-recipes/: Deep_Research_Recipe.ipynb  Large_Scale_Tasks_Recipe.py  README.md  Task_Group_Temporal_Recipe.py
python-recipes/gemini_ai_demo/: README.md  demo.py  gemini_search_enrichment.ipynb  pyproject.toml  quickstart.py  tutorial.ipynb
python-recipes/market-analysis-demo/: README.md  app.py  requirements.txt
python-recipes/parallel-deepagents-due-diligence/: .env.example  .gitignore  BLOG_DRAFT.md  README.md  agent.py  due_diligence.ipynb  langgraph.json  pyproject.toml  requirements.txt  sample_output_rivian.md
python-recipes/parallel-deepagents-due-diligence/drafts/: BLOG_DRAFT.md  Observability-with-LangSmith.md
python-recipes/parallel-deepagents-due-diligence/reports/workpapers/: competitive-landscape.md  competitor-ford.md  competitor-kia.md  competitor-mercedes.md  competitor-tesla.md  corporate-profile.md  financial-health.md  litigation-regulatory.md  news-reputation.md  rivian-due-diligence-report.md
python-recipes/parallel-investor-signals/: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
python-recipes/parallel-investor-signals/monitor/: README-monitor.md  build_portfolio.py  check.py  common.py  config.py  investors.example.json  monitors.py  portfolio_names.example.json  slack_notify.py  sweep.py
python-recipes/parallel-investor-signals/project/: .vercelignore  README.md  index.html  package-lock.json  package.json  requirements.txt  vercel.json  vite.config.ts
python-recipes/parallel-investor-signals/project/api/: index.py
python-recipes/parallel-investor-signals/project/backend/: __init__.py  attio_client.py  crm.py  investor_core.py  main.py  models.py  parallel_client.py  requirements.txt  signals_service.py  webhook_verify.py
python-recipes/parallel-investor-signals/project/src/: App.tsx  index.css  types.ts
python-recipes/parallel-investor-signals/project/src/brand/: parallel-theme.css
python-recipes/parallel-investor-signals/project/src/components/: AccountCard.tsx  AskBar.tsx  BriefHeader.tsx  BulkPanel.tsx  ConfidencePill.tsx  ContactsTable.tsx  CustomFieldsEditor.tsx  EnrichSearchBar.tsx  FieldRow.tsx  Header.tsx  HomePage.tsx  LiveResearchState.tsx  PasswordGate.tsx  SignalsPanel.tsx  SourceDrawer.tsx  SourceDrawerContext.tsx  States.tsx
python-recipes/parallel-investor-signals/project/src/lib/: api.test.ts  api.ts  auth.ts  cache.test.ts  cache.ts  customFields.ts  format.test.ts  format.ts  mock.ts  profiles.ts  useTheme.ts
python-recipes/parallel-investor-signals/tests/: conftest.py  test_attio_client.py  test_core_logic.py  test_gate.py  test_monitor_config.py  test_routes.py  test_security.py  test_slack_blocks.py
python-recipes/parallel-responses-quickstart/: .env.example  LICENSE  README.md  pyproject.toml  quickstart.py
python-recipes/parallel-responses-quickstart/tests/: test_live.py  test_quickstart.py
python-recipes/vertex_ai_demo/: .env.example  .gitignore  README.md  demo.py  gemini_search_enrichment.ipynb  gemini_search_enrichment.md  pyproject.toml  quickstart.py  tutorial.ipynb
python-recipes/vertex_ai_demo/src/vertex_parallel/: __init__.py  client.py
python-recipes/vertex_ai_demo/tests/: __init__.py  conftest.py  test_client.py
typescript-recipes/parallel-competitive-analysis/: .gitignore  README.md  index.html  package.json  result.html  worker.ts  wrangler.json
typescript-recipes/parallel-daily-insights/: .dev.vars.example  .gitignore  CHANGELOG.md  README.md  SPEC.md  package.json  worker.ts  wrangler.jsonc
typescript-recipes/parallel-datacenter-map/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
typescript-recipes/parallel-entity-resolution/: .assetsignore  BLOG.md  README.md  TODO.md  index.html  package.json  worker.ts  wrangler.jsonc
typescript-recipes/parallel-fact-checker-cerebras/: .dev.vars.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  worker.ts  wrangler.jsonc
typescript-recipes/parallel-n8n-procurement/: .env.example  .gitignore  README.md  SETUP.md  package-lock.json  package.json  parallel_procurement.md  sample-setup.excalidraw  sample-setup.md  system-architecture.excalidraw  vitest.config.ts
typescript-recipes/parallel-procurement-n8n/: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  SETUP.md  package-lock.json  package.json  parallel_procurement.md  sample-setup.md  self-healing-monitor-fleet.excalidraw  tsconfig.json  vendor-intelligence-system.excalidraw  vitest.config.ts  vitest.workspace.ts
typescript-recipes/parallel-reddit-mcp/: .env.example  .gitignore  README.md  SPEC.md  index.html  index.html.md  package-lock.json  package.json  result.html  worker.ts  wrangler.json
typescript-recipes/parallel-search-agent/: .gitignore  (+8 more)
typescript-recipes/parallel-search-agent-cerebras/: .env.example  DEPLOY.md  README.md  SPEC.md  index.html  package.json  worker.ts  wrangler.jsonc
typescript-recipes/parallel-search-agent-groq/: .env.example  .gitignore  DEPLOY.md  README.md  SPEC.md  index.html  package.json  ratelimit.ts  worker.ts  wrangler.jsonc
website/: README.md  cookbook.json  cookbook.schema.json  home.html  worker.ts  wrangler.jsonc
(+441 files in other folders)
